--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -1,16 +1,8 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+ 
   <button bindtap='login'>登录</button>
   <button bindtap='verify'>校验</button>
   <button bindtap='like'>点赞</button>
+  <button bindtap='likeDetail'>期刊点赞信息</button>
 </view>
